solved bug where long texts disappears on chatpage by editting style.css with word-wrap

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -12,13 +12,13 @@ body { font-size: 16px; font-family: "Lucida Grande",Verdana,Arial,"Bitstream Ve
 form { background: #2E8E12; padding: 3px; position: fixed; bottom: 0; width: 80%; }
 form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 form #button { color:#FFF; background: #34BB0C; border: none; padding: 10px;  width: 9%; }
-#messages { list-style-type: none; margin-top: 10%; padding: 0; position: absolute; bottom: 70px; float: left; width: 79%; }
-#messages li { padding: 5px 10px; margin-top: 10%;}
+#messages { word-wrap: break-word; list-style-type: none; margin-top: 10%; padding: 0; position: absolute; bottom: 70px; float: left; width: 79%; }
+#messages li { word-wrap: break-word; padding: 5px 10px; margin-top: 10%;}
 #notifyTyping { font-size: 12px; position: fixed; bottom: 42px; width: 100%; padding: 5px; }
 .chatNotificationCount { color: #FFF; display: none; float: right; border-radius: 12px; border: 1px solid #2E8E12; background: #34BB0C; padding: 2px 6px; }
-#messages li.chatMessageRight { border-radius: 25px; padding: 11px 18px; background: #34BB0C; color: #ffffff; position: relative; display: inline-block; max-width: 500px; float: right; clear: both; margin: 12px 0px; }
-#messages li.chatMessageRight:before { border-bottom-color: #34BB0C; border-radius: 20px / 10px; left: auto; right: -7px; content: ''; position: absolute; }
-#messages li.chatMessageRight:after { border: 8px solid transparent; border-bottom-color:  #34BB0C; border-radius: 20px / 10px; left: auto; right: -4px; bottom: 5px; content: ''; position: absolute; }
-#messages li.chatMessageLeft { border-radius: 25px; padding: 11px 18px; background: #56a8e3; color: #ffffff; position: relative; display: inline-block; max-width: 500px; float: left; clear: both; margin: 12px; }
-#messages li.chatMessageLeft:before { border-bottom-color: #56a8e3; border-radius: 20px / 10px; right: auto; left: -7px; content: ''; position: absolute; }
-#messages li.chatMessageLeft:after { border: 8px solid transparent; border-bottom-color: #56a8e3; border-radius: 20px / 10px; right: auto; left: -4px; bottom: 5px; content: ''; position: absolute; }
+#messages li.chatMessageRight { word-wrap: break-word; border-radius: 25px; padding: 11px 18px; background: #34BB0C; color: #ffffff; position: relative; display: inline-block; max-width: 500px; float: right; clear: both; margin: 12px 0px; }
+#messages li.chatMessageRight:before { word-wrap: break-word;border-bottom-color: #34BB0C; border-radius: 20px / 10px; left: auto; right: -7px; content: ''; position: absolute; }
+#messages li.chatMessageRight:after { word-wrap: break-word; border: 8px solid transparent; border-bottom-color:  #34BB0C; border-radius: 20px / 10px; left: auto; right: -4px; bottom: 5px; content: ''; position: absolute; }
+#messages li.chatMessageLeft { word-wrap: break-word; border-radius: 25px; padding: 11px 18px; background: #56a8e3; color: #ffffff; position: relative; display: inline-block; max-width: 500px; float: left; clear: both; margin: 12px; }
+#messages li.chatMessageLeft:before { word-wrap: break-word; border-bottom-color: #56a8e3; border-radius: 20px / 10px; right: auto; left: -7px; content: ''; position: absolute; }
+#messages li.chatMessageLeft:after { word-wrap: break-word; border: 8px solid transparent; border-bottom-color: #56a8e3; border-radius: 20px / 10px; right: auto; left: -4px; bottom: 5px; content: ''; position: absolute; }
